Utworzono za pomocą Colaboratory

--- a/GNN_MuonE_v1.ipynb
+++ b/GNN_MuonE_v1.ipynb
@@ -59,7 +59,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip uninstall torchvision torchtext torchaudio \n",
+        "!pip uninstall torchvision torchtext torchaudio --yes\n",
         "!pip install torch==1.11.0+cu113  -f https://download.pytorch.org/whl/torch_stable.html"
       ],
       "metadata": {
@@ -69,7 +69,7 @@
         "id": "NO8Pb7UPCg5f",
         "outputId": "85916385-7986-416f-d094-6e0ae71b5a9b"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -113,7 +113,7 @@
         "import seaborn as sns\n",
         "import torch"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -128,7 +128,7 @@
       "source": [
         "print(\"PyTorch version:\",print(torch.__version__),\", CUDA version:\", torch.version.cuda)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -159,7 +159,7 @@
         "  torch-scatter \\\n",
         "  -f https://pytorch-geometric.com/whl/torch-1.11.0+cu113.html\n"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -218,7 +218,7 @@
         "import warnings\n",
         "warnings.filterwarnings(\"ignore\", category=RuntimeWarning)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -254,7 +254,7 @@
         "max_angle= (5/6)*np.pi  # (4/6)*np.pi\n",
         "feature_scale = np.array([10,10])"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -332,7 +332,7 @@
         "    data = Data(x = torch.from_numpy(X).float(), edge_index = torch.from_numpy(e), y = torch.from_numpy(y), pid = torch.from_numpy(X[:,1]))\n",
         "    return data\n"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -358,7 +358,7 @@
         "    plt.scatter(x, y, c='k')\n",
         "    plt.ylim(-ylim,ylim)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -380,7 +380,7 @@
         "train_loader = DataLoader(train_dataset, batch_size=100, shuffle=True)\n",
         "test_loader = DataLoader(test_dataset, batch_size=100, shuffle=True)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -446,7 +446,7 @@
         "for k in range(10):\n",
         "   plot_toy_graph(test_dataset[k])"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -591,7 +591,7 @@
       "source": [
         "print(\"Fake / True = \", (len(train_dataset[0].y) - train_dataset[0].y.sum().item()) / train_dataset[0].y.sum().item())"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -734,7 +734,7 @@
         "        clf_inputs = torch.cat([x[start_idx], x[end_idx]], dim=1)\n",
         "        return self.edge_classifier(clf_inputs).squeeze(-1)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -761,7 +761,7 @@
         "model = MPNN_Network(**m_configs).to(device)\n",
         "model"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -861,7 +861,7 @@
         "    acc = correct/total\n",
         "    return acc, total_loss"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -876,7 +876,7 @@
         "v_acc_v = []\n",
         "ep = 0"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -920,7 +920,7 @@
         "    print('Epoch: {}, Accuracy: {:.4f}'.format(ep, acc))\n",
         "\n"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1149,7 +1149,7 @@
         "axs[1].set_title(\"Validation loss and accuracy\")\n",
         "axs[1].set_yscale(\"linear\")"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1247,7 +1247,7 @@
         "                     [y[edges[0,j]], y[edges[1,j]]],\n",
         "                     '-', c='k', alpha=preds[j])"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1266,7 +1266,7 @@
         "   preds = torch.sigmoid(model(data)).to('cpu')\n",
         "   plot_toy_classified(data.to('cpu'), preds, cut = 0.6)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1454,7 +1454,7 @@
         "        print('Epoch: {}, Accuracy: {:.4f}'.format(ep, acc))\n",
         "plt.plot(np.arange(len(best_acc)), best_acc)"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1699,7 +1699,7 @@
       "source": [
         "plt.plot(np.arange(len(best_acc)), best_acc)"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1749,7 +1749,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1777,7 +1777,7 @@
         "# x and y multiplied by this scale (to get similar x/y and z spread)\n",
         "xy_scale=100."
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1877,7 +1877,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1919,7 +1919,7 @@
         "print(\"Training dataset (events): \",len(train_dataset))\n",
         "print(\"Test dataset (events): \",len(test_dataset))"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2084,7 +2084,7 @@
         "model = MPNN_Network(**m_configs).to(device)\n",
         "model"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2150,7 +2150,7 @@
         "v_acc_v = []\n",
         "ep = 0"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2194,7 +2194,7 @@
         "    print('Epoch: {}, Accuracy: {:.4f}'.format(ep, acc))\n",
         "\n"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2273,7 +2273,7 @@
         "axs[1].set_title(\"Validation loss and accuracy\")\n",
         "axs[1].set_yscale(\"linear\")"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2333,7 +2333,7 @@
         "  plot_toy_classified(data.to('cpu'), preds, cut = 0.6)\n",
         "  #plot_toy_graph(train_loader.dataset[2],0.2)"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
